owl-parser/src/parser/snapshots/ella_parser__parser__expr__tests__binary-paren.snap
---
source: owl-parser/src/parser/expr.rs
expression: "expr(\"(a + b) * c\")"
---
Expr {
    kind: Binary {
        lhs: Expr {
            kind: Binary {
                lhs: Expr {
                    kind: Identifier(
                        "a",
                    ),
                    span: 1..2,
                },
                op: Plus,
                rhs: Expr {
                    kind: Identifier(
                        "b",
                    ),
                    span: 5..6,
                },
            },
            span: 1..6,
        },
        op: Asterisk,
        rhs: Expr {
            kind: Identifier(
                "c",
            ),
            span: 10..11,
        },
    },
    span: 1..11,
}
