owl-parser/src/parser/snapshots/ella_parser__parser__expr__tests__bool-lit-true.snap
---
source: owl-parser/src/parser/expr.rs
expression: "expr(\"true\")"
---
Expr {
    kind: BoolLit(
        true,
    ),
    span: 0..4,
}
