owl-parser/src/parser/snapshots/ella_parser__parser__expr__tests__double-2.5.snap
---
source: owl-parser/src/parser/expr.rs
expression: "expr(\"2.5\")"
---
Expr {
    kind: NumberLit(
        2.5,
    ),
    span: 0..3,
}
